--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,5 @@
 set -g default-terminal "screen-256color"
-
+set -g mouse on
+set -g history-file ~/.tmux_history
+bind-key -T copy-mode y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+bind-key C-y run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
