small changes. better support for scrolling + mouse use for copy/paste + emacs keybindings in tmux. two useful aliases for ripgrep. moved cargo env variable.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,10 @@
+set-option -g prefix M-Space
+unbind C-b
+bind-key M-Space send prefix
 set -g default-terminal "screen-256color"
 set -g mouse on
+bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe "xclip -selection clipboard -i" \; send -X clear-selection
 set -g history-file ~/.tmux_history
-bind-key -T copy-mode y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
-bind-key C-y run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
+unbind M-w
+bind-key -T copy-mode M-w send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+bind-key -n C-y run-shell  "xsel -o | tmux load-buffer - ; tmux paste-buffer"
