updated tmux conf. open session at current path. added screen lock behavior. fixed xterm-256color coloring behavior.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,3 +8,25 @@ set -g history-file ~/.tmux_history
 unbind M-w
 bind-key -T copy-mode M-w send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
 bind-key -n C-y run-shell  "xsel -o | tmux load-buffer - ; tmux paste-buffer"
+
+
+# Run command when pane idle
+set-option -g lock-after-time 600
+# set-option -g lock-command "/usr/bin/vis"
+set-option -g lock-command "/usr/bin/tty-clock -c"
+
+# When creating new panes, open in same directory as current pane
+# less work just to run `cd` if ~/ or elsewhere is desired than
+# retyping out the entire project dir.
+
+# I think I prefer new windows starting at ~/, however.
+# bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+# Colors are wrong for certain things in Tmux, such as Delta's diffing. This solves that.
+# [1]: https://github.com/mhartington/oceanic-next/issues/51#issuecomment-294480645
+# though suggesting setting it to screen, same general idea in this sx post
+# [2]: https://unix.stackexchange.com/questions/197391/background-color-mismatch-in-vim-and-tmux
+
+set -ga terminal-overrides ",xterm-256color:Tc"
